# splicify

./: .gitignore  CHANGELOG.md  DECISIONS.md  README.md
agent/: .gitignore  main.py  pyproject.toml  requirements.txt
agent/agent_v2/: __init__.py  attachment_kinds.py  crispr_clarification.py  crispr_pipeline.py  crispr_tools.py  deploy_router.py  explore.py  feature_resolver.py  file_kind.py  genomic_annotator.py  main_agent.py  memory.py  orchestrator.py  redirect.py  rejection.py  router.py  stub_crispr.py  tools.py  triage.py
agent/agent_v2/builder/: __init__.py  builder.py  intent_spec.py  part_set.py  verifier.py  virtual_construct.py
agent/agent_v2/interpreter/: __init__.py  agent.py  plasmid_index.py  plasmid_registry.py  tools.py
agent/agent_v2/outputs/: __init__.py  assembled_gb.py  guides_csv.py  guides_gb.py  parts_order_csv.py  protocol_csv.py  workflow_trace.py
agent/agent_v2/prompts/: rejection_template.md
agent/agent_v2/subagents/: __init__.py  guide_strategist.py  method_router.py  part_scout.py  plan_agent.py  summarizer.py  target_builder.py  target_locator.py
agent/tests/: test_annotate_on_upload.py  test_annotate_on_upload_genomic.py  test_builder.py  test_chat_endpoint.py  test_chat_stream.py  test_crispr_arg_types.py  test_crispr_batch_and_clarification.py  test_crispr_emitters.py  test_crispr_pipeline.py  test_crispr_tools.py  test_deploy_router.py  test_feature_resolver.py  test_feature_resolver_genomic.py  test_file_kind.py  test_find_genomic_record.py  test_genomic_aa_strip.py  test_genomic_annotator.py  test_health.py  test_interpreter_agent.py  test_main_agent.py  test_memory.py  test_method_router.py  test_orchestrator.py  test_orchestrator_files.py  test_outputs.py  test_parallel_dispatch.py  test_part_scout.py  test_parts_order.py  test_plan_agent.py  test_plasmid_index.py  test_plasmid_registry.py  test_protocol.py  test_resolve_genomic_isoform_picker.py  test_stubs.py  test_summarizer.py  test_target_builder.py  test_triage.py  test_v1_imports.py  test_workflow_trace.py
agent/tests/fixtures/: KEAP1.gb  pHAGE_TRE_dCas9_KRAB_v034244.gb
backend/: .env.example  Dockerfile  demo_predesign.py  pyproject.toml  test_blast_kb.py  test_chat_integration.py  test_gateway_feature_lookup.py  test_gateway_simple.py  test_gateway_workflow.py  test_llm_parser.py  test_real_lenticrispr.py  test_sdm_plasmid.gb  test_workflows_e2e.py  validate_phase1.py  validate_unified_predesign.py  visualize_gateway_product.py
backend/splicify_api/: __init__.py  _data.py  add_cds_param.py  add_dotenv.py  annotation_cache.py  app.py  batch_pcr.py  canonical_request.py  chat.py  cloning_feature_annotator.py  deploy_router.py  describe_plasmid_handler.py  doench_score.py  exclude_cds_from_llm.py  explanation.py  external_search.py  extractors.py  feature_annotator.py  feature_dna_resolver.py  files.py  gibson_plan.py  gibson_primers.py  grammar_pol2_detector.py  guide_designer.py  heuristic_motif_detector.py  heuristic_scorer.py  hierarchical_annotator.py  intent.py  interaction_builder.py  interaction_description.py  intermodular.py  inv_gib.py  llm_module_parser.py  llm_orchestrator.py  llm_prompt_update.py  main.py  mammalian_pol2_detector.py  merge_cds_annotations.py  module_linter.py  module_parser.py  (+26 more)
backend/splicify_api/agent/: agent_loop.py  agent_router.py  agent_tools.py  tool_schemas.py
backend/splicify_api/annotator/feature_db/: anchor_features.fasta  anchor_meta.csv  biosecurity_screen_report.json  dedup_removed_accessions.json  feature_annotation_inventory.json  feature_annotation_inventory.md  generation_report.json  generation_report.md  heuristic_fail_accessions.json  motif_features.fasta  motif_meta.csv  non_cds_features.fasta  non_cds_meta.csv  nr_hits_cache.fasta  qc_report.json  qc_report.md
backend/splicify_api/annotator/feature_db/blast_db/anchors/: VERSION.json  features.ndb  features.nhr  features.nin  features.nos  features.not  features.nsq  features.nto
backend/splicify_api/annotator/feature_db/blast_db/motifs/: features.ndb  features.nhr  features.nin  features.nos  features.nsq
backend/splicify_api/annotator/feature_db/blast_db/non_cds/: features.ndb  features.nhr  features.nin  features.nog  features.nos  features.not  features.nsq  features.nto
backend/splicify_api/annotator/feature_db/schema/: hierarchical_feature_rules.csv  hierarchical_feature_rules.md
backend/splicify_api/annotator/feature_db/seed/: seed_anchor_features.fasta  seed_extract.py  seed_meta.json
backend/splicify_api/cloning/: __init__.py  build_plan.py  diff_router.py  gateway_operator.py  gateway_sites.py  gibson_operator.py  golden_gate_operator.py  golden_gate_primer_designer.py  junction.py  lab_profile.py  re_database.py  restriction_operator.py  router.py  sdm_operator.py  sdm_parser.py  sgrna_oligo_designer.py
backend/splicify_api/db/: schema.sql
backend/splicify_api/feature_db/: build_reference_db.py  emit.py  filters.py  so_ontology.py
backend/splicify_api/feature_db/sources/: fpbase.py  genolib.py  rfam_curate.py  swissprot_curate.py
backend/splicify_api/heuristics/: cds_module_heuristics.csv  expression_module_heuristics.csv  module_heuristics.csv  vector_heuristics.csv
backend/splicify_api/plasmid_lm/: build_retrieval_index.py  build_vocabulary.py  host_inference.py  ingest_training_pairs.py  llm_annotator.py  lm_inference.py  lm_router.py  ncbi_fetch.py  part_cooccurrence.py  plasmid_lm_dataset.py  plasmid_lm_model.py  rehost.py  tokenize_ndjson.py  tokenizer.py  train_plasmid_lm.py  vectorbuilder_fetch.py
backend/splicify_api/predesign/: README.md  __init__.py  cloning_router.py  design_request.py  homology_extractor.py  knowledge_base.py  part_resolver.py  target_builder.py
backend/splicify_api/tests/: test_cds_processing.py  test_external_search_ncbi.py  test_module_detection.py  test_pegrna_pe3b_bypass.py  test_validation_pipeline.py
backend/tests/: test_gateway_core_capabilities.py
backend/tests/predesign/: __init__.py  test_design_request.py  test_part_resolver.py
data/: MANIFEST.yml
docs/: ARCHITECTURE.md
(+54 files in other folders)
